# PhenocamSnowClassifier

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  setup.ini
.github/workflows/: ci.yaml
docs/source/user-guide/: predict.rst  train.rst
src/phenocam_snow/: api.py  data.py  download.py  get_all_images.py  model.py  predict.py  train.py  utils.py
src/phenocam_snow/data/: data_module.py  dataset.py
src/phenocam_snow/model/: classifier.py  predict.py  train.py
src/phenocam_snow/utils/: constants.py  logger.py  os_process_manager.py
tests/: conftest.py  site_images.csv  site_months.csv  test_data.py  test_utils.py
tests/data/: site_names.csv
tests/data/get_site_dates/: canadaojp202401.html  site_dates.csv
tests/data/get_site_images/: canadaojp20240101.html
tests/data/get_site_images/canadaojp20240101_files/: browse_site_day.js
tests/data/get_site_months/: canadaojp.html
tests/data/get_site_names/: site_names.csv  site_table.html
