[tool.poetry]
name = "phenocam-snow"
version = "0.1.2"
description = "Pipeline for building deep learning models to classify PhenoCam images."
authors = ["Jason Jewik <jason.jewik@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jasonjewik/PhenoCamSnow"
documentation = "https://phenocamsnow.readthedocs.io/en/latest"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
packages = [{ include = "phenocam_snow", from = "src" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jasonjewik/PhenoCamSnow/issues"

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.4.0"
torchvision = "^0.20.1"
tensorboard = "^2.18.0"
pandas = "^2.2.3"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
Sphinx = "^8.1.3"
nbsphinx = "^0.9.5"
sphinx-rtd-theme = "^3.0.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
